update for trust

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ matrix:
     - env: TARGET=x86_64-apple-darwin
       os: osx
 
-    # Testing other channels
-    - env: TARGET=x86_64-unknown-linux-gnu
-      rust: nightly
-    - env: TARGET=x86_64-apple-darwin
-      os: osx
-      rust: nightly
+    ## Testing other channels
+    #- env: TARGET=x86_64-unknown-linux-gnu
+      #rust: nightly
+    #- env: TARGET=x86_64-apple-darwin
+      #os: osx
+      #rust: nightly
 
 before_install: set -e
 
@@ -83,7 +83,7 @@ branches:
   only:
     # release tags
     - /^v\d+\.\d+\.\d+.*$/
-    - master
+    #- master
 
 notifications:
   email:
