--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,10 +22,10 @@ environment:
     - TARGET: x86_64-pc-windows-msvc
 
     # Testing other channels
-    - TARGET: x86_64-pc-windows-gnu
-      RUST_VERSION: nightly
-    - TARGET: x86_64-pc-windows-msvc
-      RUST_VERSION: nightly
+    #- TARGET: x86_64-pc-windows-gnu
+      #RUST_VERSION: nightly
+    #- TARGET: x86_64-pc-windows-msvc
+      #RUST_VERSION: nightly
 
 install:
   - ps: >-
@@ -48,8 +48,8 @@ test_script:
       cargo build --target %TARGET% --release &&
       cargo test --target %TARGET% &&
       cargo test --target %TARGET% --release &&
-      cargo run --target %TARGET% &&
-      cargo run --target %TARGET% --release
+      #cargo run --target %TARGET% &&
+      #cargo run --target %TARGET% --release
     )
 
 before_deploy:
@@ -83,7 +83,7 @@ branches:
   only:
     # Release tags
     - /^v\d+\.\d+\.\d+.*$/
-    - master
+    #- master
 
 notifications:
   - provider: Email
